--- a/web/app/tailwind.css
+++ b/web/app/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html {
+    overscroll-behavior-y: none;
+}
+
+.logotype-bellissimo {
+    
+}
